<resources>
    <string name="app_name">Spellbook 3.5</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="character">Character</string>
    <string name="spell_browser">Spell browser</string>
    <string name="choose_character_name">Choose name</string>
    <string name="domains">Domains</string>
    <string name="classes">Classes</string>
    <string name="feats">Feats</string>
    <string name="level_N">Level %1$d</string>
    <string name="scrolls">Scrolls</string>
    <string name="slots">Slots</string>
    <string name="known">Known</string>
    <string name="spell_slots">Spell slots</string>
    <string name="known_spells">Known spells</string>
    <string name="expend_slot">Expend slot</string>
    <string name="recover_slot">Recover slot</string>
    <string name="clear_slot">Clear slot</string>
    <string name="delete_slot">Delete slot</string>
    <string name="spell_name">Name</string>
    <string name="spell_source">Source book</string>
    <string name="levels">Levels</string>
    <string name="spell_school">School</string>
    <string name="spell_descriptors">Descriptors</string>
    <string name="spell_components">Components</string>
    <string name="spell_cast_time">Cast time</string>
    <string name="spell_range">Range</string>
    <string name="spell_effect_type">Effect type</string>
    <string name="spell_effect">Effect</string>
    <string name="spell_duration">Duration</string>
    <string name="spell_saving_throw">Saving throw</string>
    <string name="spell_resistance">Resistance</string>
    <string name="spell_notes_label">NOTES</string>
    <string name="level_0">Level 0</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="add_slots">Add slots</string>
    <string name="add_character">Add character</string>
    <string name="choose_levels">Choose levels</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="recover_all">Recover all</string>
    <string name="delete_character">Delete character</string>
    <string name="rename_character">Rename character</string>
	<string name="expended">Expended</string>
    <string name="domain_slot">Domain slot</string>
    <string name="done">Done</string>
    <string name="import_database">Import database</string>
    <string name="search_spell">Search spell</string>
	<string name="assign_spell">Assign spell</string>
    <string name="search">Search</string>
    <string name="browse_spells">Browse spells</string>
    <string name="search_spells">Search spells</string>
	<string name="learn_spells">Learn spells</string>
    <string name="unlearn_spells">Unlearn spells</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="set_study_time">Set study time</string>
    <string name="set_copy_time">Set copy time</string>
	<string name="set_caster_level">Set caster level</string>
    <string name="add_arcane_scrolls">Add arcane scrolls</string>
    <string name="add_divine_scrolls">Add divine scrolls</string>
    <string name="add_scroll">Add scroll</string>
    <string name="delete_scroll">Delete scroll</string>
	<string name="backup_characters">Backup characters</string>
</resources>
