<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/toggle_expended"
        android:checkable="true"
        android:title="@string/expended"
        app:actionLayout="@layout/view_toggle"/>
    <!--<item
        android:id="@+id/expend_slot"
        android:title="@string/expend_slot"/>
    <item
        android:id="@+id/recover_slot"
        android:title="@string/recover_slot"/>-->
    <item
        android:id="@+id/clear_slot"
        android:title="@string/clear_slot"/>
    <item
        android:id="@+id/toggle_domain"
        android:checkable="true"
        android:title="@string/domain_slot"
        app:actionLayout="@layout/view_toggle"/>
    <item
        android:id="@+id/delete_slot"
        android:title="@string/delete_slot"/>
</menu>
