<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/spellbook_bg">

    <TableLayout
        android:id="@+id/dialog_choose_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_0"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_1"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_2"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_3"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_4"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_5"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_6"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_7"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_8"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_9"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:gravity="center"/>

            <it.meridian.spellbook35.views.ViewIntPicker
                android:id="@+id/picker_level_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="9"
                app:minValue="0"
                />
        </TableRow>
    </TableLayout>
</ScrollView>