<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:id="@+id/fragment_spell_info"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:padding="3dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
        <TableLayout
            android:id="@+id/spell_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_divider_horizontal"
            android:showDividers="beginning|middle|end">
        
            <TableRow
                android:id="@+id/row_spell_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_source"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/levels"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_school"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_descriptors"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_descriptor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_components"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_components"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_cast_time"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_cast_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_range"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:id="@+id/spell_effect_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_effect"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_effect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_duration"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_saving_throw"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_saving_throw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        
            <TableRow
                android:id="@+id/row_spell_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/table_divider_vertical"
                android:showDividers="beginning|middle|end">
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="1dp"
                    android:text="@string/spell_resistance"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp"
                    android:textStyle="normal|bold"/>
            
                <TextView
                    android:id="@+id/spell_resistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="1dp"
                    android:paddingStart="3dp"
                    android:textSize="12sp"/>
            </TableRow>
        </TableLayout>
    
        <TextView
            android:id="@+id/spell_flavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal|italic"/>
    
        <WebView
            android:id="@+id/spell_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/transparent"
            tools:targetApi="lollipop"/>
    
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
